--- a/ansible/roles/ingestion/tasks/configure_ingestion.yml
+++ b/ansible/roles/ingestion/tasks/configure_ingestion.yml
@@ -24,7 +24,7 @@
       DB_NAME = "{{ db_name }}"
       NIFI_HOST = 'http://nifi_app'
       NIFI_PORT = 8096
-      URL = 'http://{{ api_endpoint }}/api'
+      URL = 'https://{{ api_endpoint }}/api'
       STORAGE_TYPE= "{{ storage_type }}"
       AWS_ACCESS_KEY = "{{ aws_access_key }}"
       AWS_SECRET_KEY = "{{ aws_secret_key }}"
