--- a/ansible/upgrade.yml
+++ b/ansible/upgrade.yml
@@ -18,7 +18,7 @@
           - configurations
             #- postgres 
           - python
-            #- keycloak
+          - keycloak
           - ingestion
           - spec
           - generator
