--- a/ansible/roles/configurations/tasks/configure_base_dir.yml
+++ b/ansible/roles/configurations/tasks/configure_base_dir.yml
@@ -1,7 +1,7 @@
 ---
 - name: Creating the Base Directory for the installation
   file:
-    path: "{{ base_dir }}/cqube"
+    path: "{{ base_dir }}/cqube_v5"
     owner: "{{ system_user_name }}"
     group: "{{ system_user_name }}"
     recurse: yes
@@ -10,7 +10,7 @@
 
 - name: Creating conf directory
   file:
-    path: "{{ base_dir }}/cqube/conf"
+    path: "{{ base_dir }}/cqube_v5/conf"
     owner: "{{ system_user_name }}"
     group: "{{ system_user_name }}"
     recurse: yes
@@ -19,7 +19,7 @@
 
 - name: Creating conf directory
   file:
-    path: "{{ base_dir }}/cqube/nginx"
+    path: "{{ base_dir }}/cqube_v5/nginx"
     owner: "{{ system_user_name }}"
     group: "{{ system_user_name }}"
     recurse: yes
@@ -29,7 +29,7 @@
 - name: Copying the config.yml file as base_config.yml
   copy:
     src: ../config_files/config.yml
-    dest: "{{ base_dir }}/cqube/conf/base_config.yml"
+    dest: "{{ base_dir }}/cqube_v5/conf/base_config.yml"
     mode: '0644'
     owner: "{{ system_user_name }}"
     group: "{{ system_user_name }}"
@@ -38,7 +38,7 @@
 - name: Copying the local_storage_config.yml file as base_local_storage_config.yml
   copy:
     src: ../config_files/local_storage_config.yml
-    dest: "{{ base_dir }}/cqube/conf/base_local_storage_config.yml"
+    dest: "{{ base_dir }}/cqube_v5/conf/base_local_storage_config.yml"
     mode: '0644'
     owner: "{{ system_user_name }}"
     group: "{{ system_user_name }}"
@@ -47,7 +47,7 @@
 - name: Copying the aws_s3_config.yml file as base_aws_s3_config.yml
   copy:
     src: ../config_files/aws_s3_config.yml
-    dest: "{{ base_dir }}/cqube/conf/base_aws_s3_config.yml"
+    dest: "{{ base_dir }}/cqube_v5/conf/base_aws_s3_config.yml"
     mode: '0644'
     owner: "{{ system_user_name }}"
     group: "{{ system_user_name }}"
@@ -56,7 +56,7 @@
 - name: Copying the azure_container_config.yml file as base_azure_container_config.yml
   copy:
     src: ../config_files/azure_container_config.yml
-    dest: "{{ base_dir }}/cqube/conf/base_azure_container_config.yml"
+    dest: "{{ base_dir }}/cqube_v5/conf/base_azure_container_config.yml"
     mode: '0644'
     owner: "{{ system_user_name }}"
     group: "{{ system_user_name }}"
@@ -65,7 +65,7 @@
 - name: Copying the config.yml file as base_config.yml
   copy:
     src: ../config_files/upgradation_config.yml
-    dest: "{{ base_dir }}/cqube/conf/base_config.yml"
+    dest: "{{ base_dir }}/cqube_v5/conf/base_config.yml"
     mode: '0644'
     owner: "{{ system_user_name }}"
     group: "{{ system_user_name }}"
@@ -74,7 +74,7 @@
 - name: Copying the program_selector.yml file as program_selecor.yml
   copy:
     src: ../config_files/program_selector.yml
-    dest: "{{ base_dir }}/cqube/conf/program_selector.yml"
+    dest: "{{ base_dir }}/cqube_v5/conf/program_selector.yml"
     mode: '0644'
     owner: "{{ system_user_name }}"
     group: "{{ system_user_name }}"
