added postgres config file

--- a/microservices/postgres-ms/Dockerfile
+++ b/microservices/postgres-ms/Dockerfile
@@ -1,4 +1,6 @@
 FROM postgres
 COPY V1__create_tabel.sql /docker-entrypoint-initdb.d/V1__create_tabel.sql
 
-#COPY init.sql /docker-entrypoint-initdb.d/init.sql
+RUN rm -rf /var/lib/postgresql/data/postgresql.conf
+
+COPY postgresql.conf /var/lib/postgresql/data/postgresql.conf
