--- a/ansible/roles/configurations/tasks/main.yml
+++ b/ansible/roles/configurations/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- include_tasks: docker_container_sanity.yml
-  tags: install
+#- include_tasks: docker_container_sanity.yml
+#  tags: install
 
 - include_tasks: configure_base_dir.yml
   tags: [install, update ]
