added nifi program specified scripts

--- a/microservices/nifi-ms/Dockerfile
+++ b/microservices/nifi-ms/Dockerfile
@@ -1,7 +1,7 @@
 FROM apache/nifi:1.12.1
 USER root
-RUN mkdir /generator_data /processing_data /archived_data
 
+COPY program_files .
 COPY cqube-ingest.sh .
 COPY cqube-ingest-install.sh .
 
