--- a/ansible/roles/configurations/tasks/configure_base_dir.yml
+++ b/ansible/roles/configurations/tasks/configure_base_dir.yml
@@ -26,6 +26,15 @@
     state: directory
   tags: [install, update]
 
+- name: Creating conf directory
+  file:
+    path: "{{ base_dir }}/cqube/Sunbird-cQube-processing-ms"
+    owner: "{{ system_user_name }}"
+    group: "{{ system_user_name }}"
+    recurse: yes
+    state: directory
+  tags: [install, update]
+
 - name: Copying the config.yml file as base_config.yml
   copy:
     src: ../config_files/config.yml
