changed national program names and added cqube version

--- a/config_files/national_program_selector.yml
+++ b/config_files/national_program_selector.yml
@@ -2,9 +2,9 @@ nishtha: true
 pgi: true
 pmPoshan: true
 diksha: true
-microImprovements: true
+microImprovement: true
 nas: true
-udisePlus: true
+udise: true
 nipunBharat: true
-ncertQuiz: true
+quiz: true
 ncf: true
