changed script for readonly access

--- a/ansible/roles/postgres/tasks/configure_postgres.yml
+++ b/ansible/roles/postgres/tasks/configure_postgres.yml
@@ -11,4 +11,11 @@
     src: init.sql.j2
     dest: "../microservices/postgres-ms/init.sql"
     mode: "0644"  
+  tags: [ install, update ]
+
+- name: copying read access script to shell scripts
+  template:
+    src: pg_read_only_access.sh.j2
+    dest: "../shell_scripts/pg_read_only_access.sh"
+    mode: "0644"
   tags: [ install, update ] 
