--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,6 +7,8 @@ tasks:
       sed -i "s#api_endpoint: localhost#api_endpoint: 80-$trimmed_gitpod_url#" config_files/config.yml
       sudo chmod u+x install.sh
       sudo ./install.sh
+      cd vsk-data-seed-scripts && ./seed-data.sh
+
 ports:
   - port: 4200
     onOpen: ignore
