--- a/ansible/roles/compose/tasks/main.yml
+++ b/ansible/roles/compose/tasks/main.yml
@@ -1,3 +1,6 @@
 ---
 - include_tasks: run_compose.yml
   tags: [ install, update ]
+
+- include_tasks: run_monitoring_compose.yml
+  tags: [ install, update ]
