resolved program selector csv generation beg

--- a/config_files/program_selector.yml
+++ b/config_files/program_selector.yml
@@ -1,14 +1,14 @@
 teacherAttendance: true
-teacherAttendance_loginStatus: public
+teacherAttendance_loginStatus: false
 pgi: true
-pgi_loginStatus: public
+pgi_loginStatus: false
 pmPoshan: true
-pmPoshan_loginStatus: public
+pmPoshan_loginStatus: false
 udise: true
-udise_loginStatus: public
+udise_loginStatus: false
 nas: true
-nas_loginStatus: public
+nas_loginStatus: false
 diksha: true
-diksha_loginStatus: public
+diksha_loginStatus: false
 nishtha: true
-nishtha_loginStatus: public
+nishtha_loginStatus: false
