added keycloak roles with private and public access

--- a/ansible/roles/configurations/tasks/configure_program_selector.yml
+++ b/ansible/roles/configurations/tasks/configure_program_selector.yml
@@ -6,6 +6,38 @@
   when: access_type == "VSK"
   tags: [ install, update ]
 
+- name: Fetching state private programs
+  template:
+    src: vsk_private_programs.j2
+    dest: "../microservices/keycloak/vsk_private_programs"
+    mode: "0644"
+  when: access_type == "VSK"
+  tags: [ install, update ]
+
+- name: Refining the state private programs list
+  ansible.builtin.shell: sed 's/,\+/,/g; s/^,*//; s/,*$//' "vsk_private_programs" > "private_program_file"
+  args:
+    chdir: ../microservices/keycloak
+  mode: "0644"
+  when: access_type == "VSK"
+  tags: [ install, update ]
+
+- name: Fetching state public programs
+  template:
+    src: vsk_public_programs.j2
+    dest: "../microservices/keycloak/vsk_public_programs"
+    mode: "0644"
+  when: access_type == "VSK"
+  tags: [ install, update ]
+
+- name: Refining the state public programs list
+  ansible.builtin.shell: sed 's/,\+/,/g; s/^,*//; s/,*$//' "vsk_public_programs" > "guest_program_file"
+  args:
+    chdir: ../microservices/keycloak
+  mode: "0644"
+  when: access_type == "VSK"
+  tags: [ install, update ]
+
 - name: Generating national program selection csv file
   template:
     src: national_program_selector.csv.j2
