--- a/config_files/national_program_selector.yml
+++ b/config_files/national_program_selector.yml
@@ -1,10 +1,20 @@
 microImprovement: true
+microImprovement_loginStatus: false
 ncf: true
+ncf_loginStatus: false
 quiz: true
+quiz_loginStatus: false
 nipunBharat: true
+nipunBharat_loginStatus: false
 udise: true
+udise_loginStatus: false
 pgi: true
+pgi_loginStatus: false
 pmPoshan: true
+pmPoshan_loginStatus: false
 nas: true
+nas_loginStatus: false
 diksha: true
+diksha_loginStatus: false
 nishtha: true
+nishtha_loginStatus: false
