updated program names

--- a/config_files/national_program_selector.yml
+++ b/config_files/national_program_selector.yml
@@ -1,17 +1,17 @@
-microImprovement: true
-microImprovement_loginStatus: false
+micro_improvements: true
+micro_improvements_loginStatus: false
 ncf: true
 ncf_loginStatus: false
-quiz: true
-quiz_loginStatus: false
-nipunBharat: true
-nipunBharat_loginStatus: false
+ncert_quiz: true
+ncert_quiz_loginStatus: false
+nipun_bharat: true
+nipun_bharat_loginStatus: false
 udise: true
 udise_loginStatus: false
 pgi: true
 pgi_loginStatus: false
-pmPoshan: true
-pmPoshan_loginStatus: false
+pm_poshan: true
+pm_poshan_loginStatus: false
 nas: true
 nas_loginStatus: false
 diksha: true
