updated roles with admin dashboard

--- a/ansible/public_install.yml
+++ b/ansible/public_install.yml
@@ -23,6 +23,7 @@
           - spec
           - generator
           - dashboard
+          - admin_dashboard
           - querybuilder
           - nifi
           - nginx
