--- a/ansible/roles/compose/tasks/main.yml
+++ b/ansible/roles/compose/tasks/main.yml
@@ -2,5 +2,5 @@
 - include_tasks: run_compose.yml
   tags: [ install, update ]
 
-    #- include_tasks: run_monitoring_compose.yml
-    # tags: [ install, update ]
+- include_tasks: run_monitoring_compose.yml
+  tags: [ install, update ]
