--- a/ansible/roles/configurations/tasks/main.yml
+++ b/ansible/roles/configurations/tasks/main.yml
@@ -11,6 +11,8 @@
 - include_tasks: configure_program_selector.yml
   tags: [ install, update ]  
 
-
 - include_tasks: configure_keycloak.yml
-  tags: [ install, update ] 
+  tags: [ install, update ]
+
+- include_tasks: configure_grafana.yml
+  tags: [ install, update ]
