--- a/ansible/monitoring/docker-compose.yml
+++ b/ansible/monitoring/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   prometheus:
     image: prom/prometheus:v2.46.0
-    container_name: prometheus
+    container_name: monitoring_prometheus
     volumes:
       - ./prometheus:/etc/prometheus
       - prometheus_data:/prometheus
@@ -30,7 +30,7 @@ services:
 
   nodeexporter:
     image: prom/node-exporter:v1.6.1
-    container_name: nodeexporter
+    container_name: monitoring_nodeexporter
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
@@ -41,8 +41,8 @@ services:
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
     restart: unless-stopped
-    expose:
-      - 9100
+    ports:
+      - '9100:9100'
     networks:
       cqube_net:
         ipv4_address: "10.0.0.16"
@@ -51,7 +51,7 @@ services:
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:v0.47.1
-    container_name: cadvisor
+    container_name: monitoring_cadvisor
     privileged: true
     devices:
       - /dev/kmsg:/dev/kmsg
@@ -73,7 +73,7 @@ services:
 
   grafana:
     image: grafana/grafana:10.0.3
-    container_name: grafana
+    container_name: monitoring_grafana
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana/defaults.ini:/usr/share/grafana/conf/defaults.ini
@@ -83,10 +83,10 @@ services:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
-      - GF_SERVER_HTTP_PORT=3005
+      - "GF_SERVER_HTTP_PORT=3005"
     restart: unless-stopped
-    expose:
-      - 3005
+    ports:
+     - '3005:3005'
     networks:
       cqube_net:
         ipv4_address: "10.0.0.18"
@@ -95,12 +95,13 @@ services:
 
   pushgateway:
     image: prom/pushgateway:v1.6.0
-    container_name: pushgateway
+    container_name: monitoring_pushgateway
     restart: unless-stopped
     expose:
       - 9091
     networks:
-      - monitor-net
+      cqube_net:
+        ipv4_address: "10.0.0.19"
     labels:
       org.label-schema.group: "monitoring"
 
