modified vsk and nvsk program selector files and added ssl configuration

--- a/ansible/roles/admin_dashboard/tasks/configure_admin_dashboard.yml
+++ b/ansible/roles/admin_dashboard/tasks/configure_admin_dashboard.yml
@@ -12,7 +12,7 @@
     block: |
       PORT=4201
       NEXT_PUBLIC_API_URL = https://{{ api_endpoint }}/api/queryBuilder
-      NEXT_PUBLIC_GRAFANA_URL = http://{{ api_endpoint }}:3005/grafana
+      NEXT_PUBLIC_GRAFANA_URL = https://{{ api_endpoint }}:3005/grafana
       NEXT_PUBLIC_POSTHOG_URL = https://app.posthog.com/login
   when: mode_of_installation != "localhost"   
   tags: [ install, update ]
