--- a/config_files/national_program_selector.yml
+++ b/config_files/national_program_selector.yml
@@ -1,20 +1,20 @@
-micro_improvements: true
-micro_improvements_loginStatus: false
-ncf: true
-ncf_loginStatus: false
-ncert_quiz: true
-ncert_quiz_loginStatus: false
-nipun_bharat: true
-nipun_bharat_loginStatus: false
-udise: true
-udise_loginStatus: false
-pgi: true
-pgi_loginStatus: false
-pm_poshan: true
-pm_poshan_loginStatus: false
-nas: true
-nas_loginStatus: false
-diksha: true
-diksha_loginStatus: false
-nishtha: true
-nishtha_loginStatus: false
+micro_improvements_nation: true
+micro_improvements_nation_loginStatus: public
+ncf_nation: true
+ncf_nation_loginStatus: public
+ncert_quiz_nation: true
+ncert_quiz_nation_loginStatus: public
+nipun_bharat_nation: true
+nipun_bharat_nation_loginStatus: public
+udise_nation: true
+udise_nation_loginStatus: public
+pgi_nation: true
+pgi_nation_loginStatus: public
+pm_poshan_nation: true
+pm_poshan_nation_loginStatus: public
+nas_nation: true
+nas_nation_loginStatus: public
+diksha_nation: true
+diksha_nation_loginStatus: public
+nishtha_nation: true
+nishtha_nation_loginStatus: public
