--- a/config_files/program_selector.yml
+++ b/config_files/program_selector.yml
@@ -1,14 +1,14 @@
-sch_att: true
-sch_att_loginStatus: false
-pgi: true
-pgi_loginStatus: false
-pm_poshan: true
-pm_poshan_loginStatus: false
-udise: true
-udise_loginStatus: false
-nas: true
-nas_loginStatus: false
-diksha: true
-diksha_loginStatus: false
-nishtha: true
-nishtha_loginStatus: false
+sch_att_state: true
+sch_att_state_loginStatus: public
+pgi_state: true
+pgi_state_loginStatus: public
+pm_poshan_state: true
+pm_poshan_state_loginStatus: public
+udise_state: true
+udise_state_loginStatus: public
+nas_state: true
+nas_state_loginStatus: public
+diksha_state: true
+diksha_state_loginStatus: public
+nishtha_state: true
+nishtha_state_loginStatus: public
