reverted ssl auto configuration

--- a/ansible/roles/configurations/tasks/configure_base_dir.yml
+++ b/ansible/roles/configurations/tasks/configure_base_dir.yml
@@ -35,11 +35,11 @@
     state: directory
   tags: [install, update]
 
-- name: Copy cert files to nginx base directory
-  ansible.builtin.copy:
-    src: ../certs/ 
-    dest: "{{ base_dir }}/cqube/nginx/certs/{{ api_endpoint }}"
-  tags: [install, update]
+    #- name: Copy cert files to nginx base directory
+    #ansible.builtin.copy:
+    #    src: ../certs/ 
+    # dest: "{{ base_dir }}/cqube/nginx/certs/{{ api_endpoint }}"
+    # tags: [install, update]
 
 - name: Creating conf directory
   file:
