changes in grafana config file

--- a/ansible/roles/admin_dashboard/tasks/build_admin_dashboard.yml
+++ b/ansible/roles/admin_dashboard/tasks/build_admin_dashboard.yml
@@ -1,4 +1,4 @@
-- name: docker build dashboard ms
+- name: docker build admin dashboard ms
   docker_image:
     name: admin_dashboard_ms
     tag: '1'
