--- a/ansible/roles/configurations/tasks/configure_program_selector.yml
+++ b/ansible/roles/configurations/tasks/configure_program_selector.yml
@@ -115,3 +115,10 @@
     state: touch
   when: access_type == "others"
   tags: [ install, update ]
+
+- name: add a dummy program selector csv file in the query builder if the access type is others
+  file:
+    path: ../microservices/query-builder/program_selector.csv
+    state: touch
+  when: access_type == "others"
+  tags: [ install, update ]
