--- a/ansible/roles/querybuilder/tasks/configure_querybuilder.yml
+++ b/ansible/roles/querybuilder/tasks/configure_querybuilder.yml
@@ -68,7 +68,7 @@
       AZURE_CONTAINER = "{{ azure_container }}"
       CONTAINER_FOLDER_NAME= 'process_input'
       ORACLE_BUCKET = "{{ oracle_bucket }}"
-      KEY_CLOCK_URL = 'http://{{ keycloak_ip }}:8080/auth'
+      KEY_CLOCK_URL = 'http://keycloak_app:8080/auth'
       REALM = 'cQube'
       KEY_CLOAK_CLIENT_ID = 'cqube-5.0'
       KEY_CLOAK_SECRET = 'd0b8122f-8dfb-46h7-b69a-f5cc4e25d000'
