--- a/config_files/program_selector.yml
+++ b/config_files/program_selector.yml
@@ -12,3 +12,5 @@ diksha_state: true
 diksha_state_loginStatus: public
 nishtha_state: true
 nishtha_state_loginStatus: public
+telemetry_state: true
+telemetry_state_loginStatus: private
