--- a/ansible/compose.yml
+++ b/ansible/compose.yml
@@ -5,6 +5,7 @@
   gather_facts: no
   vars_files:
     - ../config_files/config.yml
+    - ../config_files/domain_specific_config.yml
     - ../config_files/program_selector.yml
     - ../config_files/national_program_selector.yml
     - ../config_files/aws_s3_config.yml
