--- a/ansible/public_install.yml
+++ b/ansible/public_install.yml
@@ -6,6 +6,7 @@
   become: true
   vars_files:
     - ../config_files/config.yml
+    - ../config_files/domain_specific_config.yml
     - ../config_files/program_selector.yml
     - ../config_files/national_program_selector.yml
     - ../config_files/aws_s3_config.yml
