--- a/ansible/roles/configurations/tasks/configure_grafana.yml
+++ b/ansible/roles/configurations/tasks/configure_grafana.yml
@@ -13,3 +13,10 @@
     mode: "0644"
   when: mode_of_installation == "localhost"
   tags: [ install, update ]
+
+- name: Copy ssl files directory into grafana
+  ansible.builtin.copy:
+    src: ssl_certificates/
+    dest: monitoring/
+  when: mode_of_installation != "localhost"
+  tags: [ install, update ]
