--- a/ansible/roles/spec/tasks/configure_spec.yml
+++ b/ansible/roles/spec/tasks/configure_spec.yml
@@ -29,6 +29,7 @@
       DB_NAME = "{{ db_name }}"
       NIFI_HOST = 'http://nifi_app'
       NIFI_PORT = 8096
+      SPEC_URL = 'http://spec_app:3001'
       STORAGE_TYPE = "{{ storage_type }}"
       AWS_ACCESS_KEY = "{{ aws_access_key }}"
       AWS_SECRET_KEY = "{{ aws_secret_key }}"
@@ -47,6 +48,7 @@
       DB_NAME = "{{ db_name }}"
       NIFI_HOST = 'http://nifi_app'
       NIFI_PORT = 8096
+      SPEC_URL = 'http://spec_app:3001'
       STORAGE_TYPE = "{{ storage_type }}"
       ORACLE_NAMESPACE = "{{ oracle_namespace }}"
       ORACLE_BUCKET = "{{ oracle_bucket }}"
@@ -64,6 +66,7 @@
       DB_NAME = "{{ db_name }}"
       NIFI_HOST = 'http://nifi_app'
       NIFI_PORT = 8096
+      SPEC_URL = 'http://spec_app:3001'
       STORAGE_TYPE = "{{ storage_type }}"
       MINIO_USERNAME = "{{ minio_username }}"
       MINIO_PASSWORD = "{{ minio_password }}"
@@ -82,6 +85,7 @@
       DB_NAME = "{{ db_name }}"
       NIFI_HOST = 'http://nifi_app'
       NIFI_PORT = 8096
+      SPEC_URL = 'http://spec_app:3001'
       STORAGE_TYPE = "{{ storage_type }}"
       AZURE_CONNECTION_STRING = "{{ azure_connection_string }}"
       AZURE_CONTAINER = "{{ azure_container }}"
