--- a/ansible/localhost_install.yml
+++ b/ansible/localhost_install.yml
@@ -22,6 +22,7 @@
           - keycloak  
           - ingestion
           - spec
+          - csv_parser
           - generator
           - dashboard
           - admin_dashboard
